--- a/frontend/gfp/index.html
+++ b/frontend/gfp/index.html
@@ -5,13 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
-    <style>
-      *{
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-    </style>
+    <link href="/src/styles.css" rel="stylesheet">
+
   </head>
   <body>
     <div id="root"></div>
